# Sensoritzacio-i-Control-de-Robots-Mobils

./: How to use  launcher.launch
project1/: CMakeLists.txt  package.xml
project1/launch/: launcher.launch
project1/src/: moveRobot.cpp  talkerGoals.cpp  world_generator.cpp
project1/worlds/: dades guardades  mundo.world  mundo_template.world
src/project1/: How to use
src/project1/launch/: launcher.launch
src/project1/src/: moveRobot.cpp
